# repricer-2.0

./: .gitignore  .vercelignore  pyproject.toml  requirements.txt  vercel.json
ENV/: AmazonCredentials.env.example
api/: auth.py  errors.py  main.py
api/middleware/: security.py
api/routes/: auth.py  history.py  overview.py  qc.py  repricer.py  rules.py  sales.py  settings_db.py  skus.py  submissions.py
config/: pricing_features.yaml
docs/: QA_TESTER_BRIEF.md
lib/: amazon_listing.py  amazon_reports.py  catalog.py  env_config.py  features_engine.py  fulfillment_pairs.py  get_access_token.py  marketplaces.py  price.py  price_reflection.py  supabase_store.py  variations.py
lib/qc/: data_qc_agent.py  pricing_qc_agent.py  repricing_qc_agent.py  runner.py
scripts/: SUPABASE_SETUP.md  list_fbm_skus.py  list_variations.py  set_price.py  setup_supabase_catalog_cron.sql  start_api.sh  start_ui.sh  sync_catalog.py  sync_sales.py  sync_vercel_env.sh  vercel_build.py
supabase/: config.toml
supabase/migrations/: 20260622081600_initial_schema.sql  20260622120000_catalog_sync_cron.sql  20260622140000_marketplace_tables_product_names.sql  20260622160000_price_history_insert_policy.sql  20260622170000_sku_catalog_security_invoker.sql  20260622180000_security_hardening.sql  20260623100000_sales_qc_reflection.sql  20260623120000_sales_view_and_cron.sql  20260624140000_fix_profiles_rls_recursion.sql  20260624150000_price_history_update_policy.sql  (+4 more)
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
web/src/: App.tsx  (+1 more)
(+28 files in other folders)
